# Datafusion

./: .env  ARCHITECTURE.md  Cargo.toml  Dockerfile  LINKEDIN_ARTICLE.md  README.md  docker-compose.yaml
data/: sample.csv  sample.parquet
src/: api.rs  config.rs  kafka.rs  main.rs  observability.rs  query.rs  udf.rs
