[package]
name = "Datafusion"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "36.0"
arrow = "47.0"
rdkafka = { version = "0.34", features = ["tokio"] }
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-prometheus = "0.13"
prometheus = "0.13"
axum = { version = "0.7" ,features = ["http1", "http2", "json"] }
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio-stream = "0.1.17"
lazy_static = "1.5.0"
opentelemetry_sdk = "0.20.0"
i18n-embed = { version = "0.14", features = ["fluent-system"] }
i18n-embed-fl = "0.7"
rust-embed = "8.0"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3